<resources>
    <string name="app_name">Photographer</string>
    <string name="title_home">Головна</string>
    <string name="title_portfolio">Портфоліо</string>
    <string name="maryna_goryana">Марина Горяна</string>
    <string name="sumy_photographer">Фотограф в Сумах</string>
    <string name="order_photo_session">Замовити зйомку</string>
    <string name="home_description">"Привіт, я – Марина Горяна. Професійний фотограф в Сумах. Фотографую звичайних людей так, наче вони – моделі. Знаю, куди вам подіти руки, як поставити ногу і вмію зловити вдалий кадр. "</string>
    <string name="phone_number">+38 (066) 66 23 802</string>
    <string name="photo_session">Фотосессия</string>
    <string name="love_story">Love Story</string>
    <string name="more_detail">Подробнее</string>

    <string name="uah">%d грн</string>
    <string name="time">%d год</string>
    <string name="photo_count">%d кольорових фото</string>

    <string name="order_photo_session_type">Замовлення фотосессії "%s"</string>
    <string name="order">Замовлення</string>
    <string name="edditional_wishes">Додаткові побажання</string>
    <string name="wish_date">Бажана дата зйомки *</string>
    <string name="email">Електронна скринька *</string>
    <string name="phone_number_txt">Номер телефону *</string>
    <string name="your_name">Ваше Ім\'я *</string>
    <string name="require_fields">Заповніть всі необхідні поля позначені зірочкою (*)</string>
</resources>