<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".ui.fragments.OrderFragment">

    <TextView
        android:id="@+id/orderHeaderTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/order_photo_session_type"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/your_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/phoneNumberTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/phone_number_txt"
        android:inputType="phone"
        android:maxLength="10" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/dateTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/wish_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/wishesTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/edditional_wishes"
        android:inputType="text" />

    <TextView
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_rectangle"
        android:elevation="10dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/order_photo_session" />

</LinearLayout>