<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stroke_rectangle">

    <ImageView
        android:id="@+id/sessionTypePhoto"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/photo"
        android:layout_marginVertical="3dp"
        android:layout_marginStart="3dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:background="@drawable/stroke_rectangle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:text="@string/photo_session"/>

        <TextView
            android:id="@+id/sessionTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/header_text_size"
            android:text="@string/love_story"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:layout_marginVertical="15dp"
            android:text="@string/order_photo_session"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_detail"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>