<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.maryna.photographer.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_portfolio"
        android:name="com.maryna.photographer.ui.fragments.PortfolioFragment"
        android:label="@string/title_portfolio"
        tools:layout="@layout/fragment_portfolio" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.maryna.photographer.ui.fragments.DetailFragment"
        tools:layout="@layout/detail_fragment" >
    </fragment>
    <fragment
        android:id="@+id/selectPackageFragment"
        android:name="com.maryna.photographer.ui.fragments.SelectPackageFragment"
        tools:layout="@layout/fragment_select_package" />
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.maryna.photographer.ui.fragments.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order" />

</navigation>